--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -37,5 +37,6 @@
     <a href="{% url 'dashboard' %}">Back to dashboard</a>&nbsp;&nbsp;
     <a href="{% url 'social:begin' 'github' %}">Login with Github</a>&nbsp;&nbsp;
     <a href="{% url 'password_reset' %}">Reset password</a>&nbsp;&nbsp;
-    <a href="{% url 'register' %}">Register</a>
+    <a href="{% url 'register' %}">Register</a>&nbsp;&nbsp;
+    <a href="{% url 'listing' %}">All Blogs</a>
 {% endblock %}
